# ingredientDatabase

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/: ingredient_pipeline.db-shm
data/templates/: compatibility_seed_template.csv
docs/: architecture.md  source_discovery.md
ingredient_acquisition_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ingredient_pipeline/: __init__.py  cli.py  config.py  pipeline.py
ingredient_pipeline/compatibility/: __init__.py  curated_import.py  pairwise_tags.py  ph_profiles.py  priority_scoring.py  role_normalizer.py  schema.py  stability_rules.py
ingredient_pipeline/enrichment/: __init__.py  pubchem.py
ingredient_pipeline/phase2/: __init__.py  identity.py
ingredient_pipeline/sources/: chebi.py  cosing.py  fda_iid.py  fda_unii.py  pcpc.py
ingredient_pipeline/storage/: db.py
ingredient_pipeline/utils/: http_client.py  logging_utils.py
scripts/: smoke_test.py
tests/: smoke_compatibility.py  smoke_phase2.py
tmp/: chunk_reference.js  chunk_search.js  chunk_services.js  cosing_chunk.js  cosing_main.js
